# remote-functions

./: .gitignore  README.md  client.py  interact.py  server.py  setup.cfg  test.py  test2.py  test_interact.py  tools.py  upload.py
examples/authentication/: client.py  server.py
examples/basic/: client.py  server.py
examples/remote_classes/: client.py  server.py
remote_functions/: interact.py  tools.py
src/: __init__.py  tools.py
src/remote_functions/: __init__.py  interact.py  tools.py
