[metadata]
name = remote-functions
version = 0.0.4
author = Jake Strouse
author_email = jstrouse@meh.llc
description = remote-functions provides type enforced remotely run Python functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jakestrouse00/remote-functions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    fastapi[all]
    uvicorn[standard]
    requests == 2.27.1

[options.packages.find]
where = src